<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Bocciapp</string>
    <string name="retour">Retour</string>
    <string name="arret_d_urgence">Arret d\'urgence</string>
    <string name="suivant">Suivant</string>
    <string name="fini">fini !</string>
    <string name="angle">Angle :</string>
    <string name="hauteur">Hauteur :</string>
    <string name="arbitre">Arbitre</string>
    <string name="balles_restantes">Balles restantes</string>
    <string name="match">MATCH</string>
    <string name="entrainement">ENTRAINEMENT</string>
    <string name="welcome_to_bocciap">Welcome to BOCCIAP</string>
    <string name="adresse_ip">Adresse IP</string>
    <string name="port">Port</string>
    <string name="ok">OK</string>
    <string name="mode_match_intro">Te voici dans le mode match. Informations avant de lancer la partie. Appuie sur le bouton \"arrêt d\'urgence\" ou \"appel à l\'arbitre\" en cas de besoin. Tu disposes d\'une minute pour chaque tir. Tu devras effectuer 3 tirs au total.</string>
    <string name="instruct_match">Informations sur le fonctionnement. Choisis la hauteur de ton plateau à l\'aide des flèches directionnelles, puis tire ta balle et appuie sur le bouton \"fini\".</string>
    <string name="end_match">Fin du match. Bravo a toi ! A la prochaine !</string>
    <string name="mode_positions">Mode positions</string>
    <string name="mode_aleatoire">MODE ALEATOIRE</string>
    <string name="button_next">Essaye d\'atteindre la position ! \n \n Appuie sur le bouton ci-contre pour changer de position</string>
    <string name="descr_bouton_rand">Bouton rond rouge avec deux flèches transparentes pour changer la position aléatoire</string>
    <string name="position_1">Position 1 :</string>
    <string name="bouton_rond_avec_un_symbole_play_dedans">Bouton rond avec un symbole play dedans</string>
    <string name="bouton_poubelle">Bouton poubelle</string>
    <string name="position_2">Position 2 :</string>
    <string name="position_3">Position 3 :</string>
    <string name="position_4">Position 4 :</string>
    <string name="bouton_information">Bouton information</string>
    <string name="te_voici_dans_le_mode">TE VOICI DANS LE MODE</string>
    <string name="debut_match">AVANT DE LANCER LA PARTIE : Appuie sur le bouton Arrêt d’urgence ou Appel à l’arbitre en cas de besoin Tu disposes de 3 minutes pour effectuer tes 3 tirs Appuie sur suivant pour démarrer la partie</string>
    <string name="instructions_match">Choisis la hauteur du plateau et la direction de la rampe à l’aide des flèches directionnelles Ensuite, tire ta balle Appuie sur le bouton FINI !</string>
</resources>